--- a/Smartphone-sales-manager/src/Smartphone_sales_management/UI/Component/KhuyenMai.form
+++ b/Smartphone-sales-manager/src/Smartphone_sales_management/UI/Component/KhuyenMai.form
@@ -92,14 +92,12 @@
                           <Component id="jLabelmasanpham" min="-2" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="89" max="-2" attributes="0"/>
                       </Group>
-                      <Group type="102" alignment="0" attributes="0">
+                      <Group type="102" attributes="0">
                           <EmptySpace max="-2" attributes="0"/>
-                          <Component id="jLabelloaikhuyenmai" min="-2" pref="95" max="-2" attributes="0"/>
-                          <EmptySpace max="32767" attributes="0"/>
-                      </Group>
-                      <Group type="102" alignment="0" attributes="0">
-                          <EmptySpace max="-2" attributes="0"/>
-                          <Component id="jLabelltenkhuyenmai" min="-2" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Component id="jLabelloaikhuyenmai" alignment="0" min="-2" pref="95" max="-2" attributes="0"/>
+                              <Component id="jLabelltenkhuyenmai" alignment="0" min="-2" max="-2" attributes="0"/>
+                          </Group>
                           <EmptySpace max="32767" attributes="0"/>
                       </Group>
                   </Group>
