Revert "Merge pull request #18 from VuongTrayCe/Tuấn"
This reverts commit 8a29ed7ac7fecc3705ab7b1f47eba2f8f594b64d, reversing
changes made to baf3b3107e7f446f29870a89456f2a268b1ee893.

--- a/Smartphone-sales-manager/src/Smartphone_sales_management/UI/Swing/MenuItem.form
+++ b/Smartphone-sales-manager/src/Smartphone_sales_management/UI/Swing/MenuItem.form
@@ -35,8 +35,8 @@
           <Group type="102" attributes="0">
               <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="lbName" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="lbIcon" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="lbName" alignment="3" max="32767" attributes="0"/>
+                  <Component id="lbIcon" alignment="3" max="32767" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
           </Group>
