--- a/Smartphone-sales-manager/src/Smartphone_sales_management/UI/form/Menu.form
+++ b/Smartphone-sales-manager/src/Smartphone_sales_management/UI/form/Menu.form
@@ -67,7 +67,7 @@
         </Component>
       </SubComponents>
     </Container>
-    <Component class="Smartphone_sales_management.UI.Swing.ListMenu" name="listMenu1">
+    <Component class="Smartphone_sales_management.UI.Swing.Menu.ListMenu" name="listMenu1">
       <Properties>
         <Property name="model" type="javax.swing.ListModel" editor="org.netbeans.modules.form.editors2.ListModelEditor">
           <StringArray count="0"/>
